--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       color: #fff;
       font-family: 'Inter', sans-serif;
       min-height: 100vh;
+      font-size: 16px; /* aggiunto */
     }
     header {
       background: linear-gradient(90deg, #e50914, #b00610);
@@ -179,6 +180,90 @@
         max-width: 100%;
       }
     }
+
+    /* INIZIO MODIFICHE PER MOBILE OTTIMIZZAZIONE */
+    @media (max-width: 480px) {
+      body {
+        font-size: 14px;
+      }
+      header {
+        padding: 15px 20px;
+      }
+      header h1 {
+        font-size: 22px;
+        margin-bottom: 10px;
+      }
+      #search-container {
+        max-width: 100%;
+        width: 100%;
+      }
+      #searchInput {
+        font-size: 14px;
+        padding: 10px 40px 10px 15px;
+      }
+      #searchBtn {
+        padding: 7px 14px;
+        font-size: 14px;
+      }
+      #results {
+        padding: 15px 20px;
+        grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+        gap: 15px;
+      }
+      .card img {
+        height: 220px;
+      }
+      .card h3 {
+        font-size: 13px;
+        padding: 8px 6px;
+      }
+      .modal {
+        max-width: 95vw;
+        padding: 15px;
+      }
+      .modal img {
+        max-height: 200px;
+      }
+      .modal h2 {
+        font-size: 20px;
+      }
+      .modal p {
+        font-size: 14px;
+      }
+      .modal .actions button,
+      .modal .actions select {
+        font-size: 13px;
+        padding: 8px 12px;
+      }
+      #player-container iframe {
+        height: 300px !important;
+      }
+      #player-container {
+        padding: 15px 20px;
+        max-width: 100vw;
+        margin: 10px auto;
+      }
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      #searchBtn {
+        margin-top: 10px;
+        width: 100%;
+      }
+      #searchInput {
+        width: 100%;
+      }
+      .modal .actions {
+        flex-direction: column;
+        gap: 10px;
+      }
+      .modal .actions button,
+      .modal .actions select {
+        width: 100%;
+      }
+    }
+    /* FINE MODIFICHE PER MOBILE OTTIMIZZAZIONE */
   </style>
 </head>
 <body>
@@ -287,11 +372,12 @@
                 <select id="seasonSelect">${seasonOptions}</select>
                 <label for="episodeSelect">Episodio:</label>
                 <select id="episodeSelect"></select>
-                <button id="playBtn">▶ Riproduci</button>
-              `
-                : `<button id="playBtn">▶ Riproduci</button>`
+                <button id="playEpisodeBtn">Guarda Episodio</button>
+                `
+                : trailer
+                ? `<button id="playTrailerBtn">Guarda Trailer</button>`
+                : `<button disabled title="Trailer non disponibile">Trailer Non Disponibile</button>`
             }
-            ${trailer ? `<button onclick="window.open('https://www.youtube.com/watch?v=${trailer.key}', '_blank')">🎬 Trailer</button>` : ''}
           </div>
         </div>
       `;
@@ -299,71 +385,67 @@
       document.body.appendChild(overlay);
 
       if (type === 'tv') {
-        const seasonSelect = document.getElementById('seasonSelect');
-        const episodeSelect = document.getElementById('episodeSelect');
+        const seasonSelect = overlay.querySelector('#seasonSelect');
+        const episodeSelect = overlay.querySelector('#episodeSelect');
+        const playBtn = overlay.querySelector('#playEpisodeBtn');
 
-        // Carica episodi della prima stagione per default
-        loadEpisodes(selectedSeason);
+        // Carica episodi della prima stagione al caricamento
+        loadEpisodes(1);
 
-        seasonSelect.addEventListener('change', e => {
-          selectedSeason = parseInt(e.target.value);
+        seasonSelect.addEventListener('change', (e) => {
+          selectedSeason = e.target.value;
           loadEpisodes(selectedSeason);
         });
 
-        episodeSelect.addEventListener('change', e => {
-          selectedEpisode = parseInt(e.target.value);
+        episodeSelect.addEventListener('change', (e) => {
+          selectedEpisode = e.target.value;
+        });
+
+        playBtn.addEventListener('click', () => {
+          // Url dummy player, sostituire con il player reale se disponibile
+          const playerUrl = `https://www.123movieshub.to/embed/tv/${info.id}/${selectedSeason}/${selectedEpisode}`;
+          showPlayer(playerUrl);
+          overlay.remove();
+        });
+      } else if (trailer) {
+        overlay.querySelector('#playTrailerBtn').addEventListener('click', () => {
+          const url = `https://www.youtube.com/embed/${trailer.key}?autoplay=1&rel=0`;
+          showPlayer(url);
+          overlay.remove();
         });
       }
-
-      document.getElementById('playBtn').addEventListener('click', () => {
-        if (type === 'movie') {
-          showPlayer(`https://vixsrc.to/movie/${info.id}`);
-        } else if (type === 'tv') {
-          showPlayer(`https://vixsrc.to/tv/${info.id}/${selectedSeason}/${selectedEpisode}`);
-        }
-      });
     }
 
-    function createCard(item) {
-      const div = document.createElement('div');
-      div.className = 'card';
-      const title = item.title || item.name;
-      const img = item.poster_path ? `https://image.tmdb.org/t/p/w300${item.poster_path}` : 'https://via.placeholder.com/300x450?text=No+Image';
-
-      div.innerHTML = `
-        <img src="${img}" alt="${title}" />
-        <h3>${title}</h3>
-      `;
-
-      div.addEventListener('click', async () => {
-        const details = await getDetails(item.id, item.media_type);
-        showModal(details, item.media_type);
-      });
-
-      return div;
-    }
-
-    async function doSearch() {
-      const queryInput = document.getElementById('searchInput');
-      const query = queryInput.value.trim();
-      const results = document.getElementById('results');
+    document.getElementById('searchBtn').addEventListener('click', async () => {
+      const query = document.getElementById('searchInput').value.trim();
       if (!query) return;
-      results.innerHTML = '<p style="text-align:center;">Caricamento...</p>';
-      const items = await searchMedia(query);
-      results.innerHTML = '';
-      if (!items.length) {
-        results.innerHTML = '<p style="text-align:center;">Nessun risultato trovato.</p>';
+      const resultsDiv = document.getElementById('results');
+      resultsDiv.innerHTML = '<p>Caricamento...</p>';
+      const results = await searchMedia(query);
+      if (results.length === 0) {
+        resultsDiv.innerHTML = '<p>Nessun risultato trovato.</p>';
         return;
       }
-      items.forEach(item => results.appendChild(createCard(item)));
-      // Scrolla ai risultati
-      results.scrollIntoView({ behavior: 'smooth' });
-    }
-
-    document.getElementById('searchBtn').addEventListener('click', doSearch);
-    document.getElementById('searchInput').addEventListener('keydown', e => {
-      if (e.key === 'Enter') doSearch();
+      resultsDiv.innerHTML = results.map(item => {
+        const title = item.title || item.name || 'Sconosciuto';
+        const img = item.poster_path ? `https://image.tmdb.org/t/p/w342${item.poster_path}` : 'https://via.placeholder.com/342x513?text=No+Image';
+        return `<div class="card" data-id="${item.id}" data-type="${item.media_type}">
+                  <img src="${img}" alt="${title}" />
+                  <h3>${title}</h3>
+                </div>`;
+      }).join('');
     });
+
+    document.getElementById('results').addEventListener('click', async (e) => {
+      const card = e.target.closest('.card');
+      if (!card) return;
+      const id = card.dataset.id;
+      const type = card.dataset.type;
+      if (!id || !type) return;
+      const details = await getDetails(id, type);
+      showModal(details, type);
+    });
+
   </script>
 </body>
 </html>
