--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 <body>
 
 <header>
-  <div class="logo">NETFLIX</div>
+  <div class="logo">NETFLoX</div>
   <div class="search-container">
     <input type="text" id="searchInput" placeholder="Cerca film o serie..." autocomplete="off" />
     <button class="search-btn" id="searchBtn">Cerca</button>
