--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>MRFluffolFilm</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
   <style>
     * {
       box-sizing: border-box;
-      margin: 0; padding: 0;
+      margin: 0;
+      padding: 0;
     }
 
     body {
@@ -100,7 +101,8 @@
 
     .modal-overlay {
       position: fixed;
-      top: 0; left: 0;
+      top: 0;
+      left: 0;
       width: 100vw;
       height: 100vh;
       background: rgba(0, 0, 0, 0.85);
@@ -199,13 +201,56 @@
       z-index: 10;
       user-select: none;
     }
+
+    /* Mobile responsiveness */
+    @media (max-width: 600px) {
+      header {
+        padding: 15px 20px;
+        justify-content: center;
+      }
+      header h1 {
+        font-size: 22px;
+        flex-basis: 100%;
+        text-align: center;
+        margin-bottom: 10px;
+      }
+      #search-container {
+        max-width: 100%;
+      }
+      #searchInput {
+        font-size: 14px;
+        padding: 10px 40px 10px 12px;
+      }
+      #searchBtn {
+        padding: 7px 12px;
+        font-size: 14px;
+      }
+      #results {
+        padding: 15px 20px;
+        grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+        gap: 15px;
+      }
+      .card img {
+        height: 220px;
+      }
+      .modal {
+        max-width: 95%;
+        padding: 15px;
+      }
+      .modal h2 {
+        font-size: 20px;
+      }
+      iframe.player {
+        height: 280px;
+      }
+    }
   </style>
 </head>
 <body>
   <header>
     <h1>MRFluffolFilm 🎬</h1>
     <div id="search-container">
-      <input type="text" id="searchInput" placeholder="Cerca film, serie o attori...">
+      <input type="text" id="searchInput" placeholder="Cerca film, serie o attori..." />
       <button id="searchBtn">Cerca</button>
     </div>
   </header>
@@ -215,12 +260,16 @@
     const tmdbKey = 'a3c17d492a24a9f77acb23626404edd1';
 
     async function searchMedia(query) {
-      const urlMulti = `https://api.themoviedb.org/3/search/multi?api_key=${tmdbKey}&language=it-IT&query=${encodeURIComponent(query)}`;
+      const urlMulti = `https://api.themoviedb.org/3/search/multi?api_key=${tmdbKey}&language=it-IT&query=${encodeURIComponent(
+        query
+      )}`;
       const resMulti = await fetch(urlMulti);
       const dataMulti = await resMulti.json();
 
-      const moviesTv = dataMulti.results.filter(item => item.media_type === 'movie' || item.media_type === 'tv');
-      const people = dataMulti.results.filter(item => item.media_type === 'person');
+      const moviesTv = dataMulti.results.filter(
+        (item) => item.media_type === 'movie' || item.media_type === 'tv'
+      );
+      const people = dataMulti.results.filter((item) => item.media_type === 'person');
 
       let peopleMedia = [];
       for (const person of people) {
@@ -228,7 +277,7 @@
         const resPerson = await fetch(urlPerson);
         const dataPerson = await resPerson.json();
 
-        const knownFor = dataPerson.cast.filter(c => c.media_type === 'movie' || c.media_type === 'tv');
+        const knownFor = dataPerson.cast.filter((c) => c.media_type === 'movie' || c.media_type === 'tv');
         peopleMedia = peopleMedia.concat(knownFor);
       }
 
@@ -256,8 +305,10 @@
       const overlay = document.createElement('div');
       overlay.className = 'modal-overlay';
 
-      const actors = info.credits && info.credits.cast ? info.credits.cast.slice(0, 5).map(a => a.name).join(', ') : 'Nessuna informazione';
-      const trailer = info.videos && info.videos.results ? info.videos.results.find(v => v.type === 'Trailer' && v.site === 'YouTube') : null;
+      const actors =
+        info.credits && info.credits.cast ? info.credits.cast.slice(0, 5).map((a) => a.name).join(', ') : 'Nessuna informazione';
+      const trailer =
+        info.videos && info.videos.results ? info.videos.results.find((v) => v.type === 'Trailer' && v.site === 'YouTube') : null;
 
       const isMovie = type === 'movie';
       const title = isMovie ? info.title : info.name;
@@ -267,7 +318,7 @@
       if (!isMovie && info.seasons) {
         seasonsHtml = `
           <select id="seasonSelect">
-            ${info.seasons.map(s => `<option value="${s.season_number}">${s.name}</option>`).join('')}
+            ${info.seasons.map((s) => `<option value="${s.season_number}">${s.name}</option>`).join('')}
           </select>
           <select id="episodeSelect"></select>
         `;
@@ -276,14 +327,18 @@
       overlay.innerHTML = `
         <div class="modal">
           <span class="close-btn" title="Chiudi">&times;</span>
-          <img src="${imageUrl}" alt="Poster">
+          <img src="${imageUrl}" alt="Poster" />
           <h2>${title}</h2>
           <p>${info.overview || 'Nessuna descrizione disponibile.'}</p>
           <div class="actors"><strong>Attori principali:</strong> ${actors}</div>
           <div class="actions">
             ${seasonsHtml}
             <button id="playBtn">▶ Riproduci</button>
-            ${trailer ? `<button id="trailerBtn">🎬 Trailer</button>` : ''}
+            ${
+              trailer
+                ? `<button id="trailerBtn">🎬 Trailer</button>`
+                : ''
+            }
           </div>
           <div id="playerContainer"></div>
         </div>
@@ -300,9 +355,13 @@
         const episodeSelect = overlay.querySelector('#episodeSelect');
 
         async function loadEpisodes(season) {
-          const res = await fetch(`https://api.themoviedb.org/3/tv/${info.id}/season/${season}?api_key=${tmdbKey}&language=it-IT`);
+          const res = await fetch(
+            `https://api.themoviedb.org/3/tv/${info.id}/season/${season}?api_key=${tmdbKey}&language=it-IT`
+          );
           const data = await res.json();
-          episodeSelect.innerHTML = data.episodes.map(e => `<option value="${e.episode_number}">${e.episode_number} - ${e.name}</option>`).join('');
+          episodeSelect.innerHTML = data.episodes
+            .map((e) => `<option value="${e.episode_number}">${e.episode_number} - ${e.name}</option>`)
+            .join('');
         }
 
         seasonSelect.addEventListener('change', () => {
@@ -340,7 +399,6 @@
           });
 
           playerOverlay.querySelector('.modal').scrollIntoView({ behavior: 'smooth' });
-
         } else {
           const season = overlay.querySelector('#seasonSelect').value;
           const episode = overlay.querySelector('#episodeSelect').value;
@@ -369,10 +427,12 @@
       const div = document.createElement('div');
       div.className = 'card';
       const title = item.title || item.name;
-      const img = item.poster_path ? `https://image.tmdb.org/t/p/w300${item.poster_path}` : 'https://via.placeholder.com/300x450?text=No+Image';
+      const img = item.poster_path
+        ? `https://image.tmdb.org/t/p/w300${item.poster_path}`
+        : 'https://via.placeholder.com/300x450?text=No+Image';
 
       div.innerHTML = `
-        <img src="${img}" alt="${title}">
+        <img src="${img}" alt="${title}" />
         <h3>${title}</h3>
       `;
 
@@ -387,28 +447,22 @@
     async function doSearch() {
       const query = document.getElementById('searchInput').value.trim();
       const results = document.getElementById('results');
+      results.innerHTML = '';
       if (!query) return;
-      results.innerHTML = '<p style="text-align:center;">Caricamento...</p>';
-      try {
-        const items = await searchMedia(query);
-        if (items.length === 0) {
-          results.innerHTML = '<p style="text-align:center;">Nessun risultato trovato.</p>';
-          return;
-        }
-        results.innerHTML = '';
-        items.forEach(item => {
-          const card = createCard(item);
-          results.appendChild(card);
-        });
-      } catch (e) {
-        results.innerHTML = '<p style="text-align:center;">Errore durante la ricerca.</p>';
-        console.error(e);
+
+      const data = await searchMedia(query);
+      if (!data.length) {
+        results.innerHTML = '<p style="text-align:center; color:#aaa;">Nessun risultato trovato.</p>';
+        return;
       }
+
+      data.forEach((item) => {
+        results.appendChild(createCard(item));
+      });
     }
 
     document.getElementById('searchBtn').addEventListener('click', doSearch);
-
-    document.getElementById('searchInput').addEventListener('keyup', (e) => {
+    document.getElementById('searchInput').addEventListener('keypress', (e) => {
       if (e.key === 'Enter') doSearch();
     });
   </script>
